--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     </p>
                     <ol>
                         <li>点击 <tt>Enable microphone</tt> 打开麦克风使用权限</li>
-                        <li>点击 <tt>Record</tt> 准备录制</li>
+                        <li>点击 <tt>Record</tt> 后有2秒的准备时间，之后将录制2.5秒的音频。红色停止，黄色准备，绿色录制。</li>
                         <li>说出唤醒词 <strong>嗨，小君</strong></li>
-                        <li>可以离麦克风不同的距离，喊出不同的音量，多录制几个，不要害羞</li>
-                        <li>点击 <tt>Submit</tt> 提交给我们</li>
+                        <li>可以离麦克风不同的距离，喊出不同的音量，多录制几个（3-5），不要害羞</li>
+                        <li>点击 <tt>提交</tt> 之前试听一下，如果录制的不好，可以删除重新录制</li>
                     </ol>
                 </div>
                 <div class="row-fluid">
@@ -67,7 +67,7 @@
                 <div class="control-group mt-5">
                     <div class="controls row">
                         <div class="col">
-                            <h3>Examples (3 required)</h3>
+                            <!-- <h3>Examples (3 required)</h3> -->
                         </div>
                     </div>
                     <div class="controls row">
@@ -83,7 +83,7 @@
                         <div class="col-auto">
                             <button id="submit" type="submit" class="btn btn-lg btn-success" data-action="submit">
                                 <i class="fas fa-upload mr-1"></i>
-                                Submit
+                                提交
                             </button>
                             <i id="submittedIcon" class="fas fa-thumbs-up ml-2" title="Submitted" hidden></i>
                         </div>
@@ -111,7 +111,7 @@
          var waitSecondsLeft = 0;
 
          // Seconds to record
-         const numRecordSeconds = 3;
+         const numRecordSeconds = 2.5;
          var recordSecondsLeft = 0;
 
          function q(id) {
@@ -240,7 +240,7 @@
              const formData = new FormData(q('#form'));
              const formPage = 'http://39.103.226.0:5555/audios';
 
-             setAlert('Submitting data...', 'alert-warning');
+             setAlert('正在提交...', 'alert-warning');
 
              // Attach each audio blob as a file
              Object.keys(blobs).forEach(function(k) {
@@ -249,17 +249,18 @@
 
              formData.set('format', audioFormat);
 
-             let response = await fetch(formPage, {
+             let response = fetch(formPage, {
                  method: 'POST',
                  body: formData
              })
-             
+             setAlert('上传成功，感谢', 'alert-success');
+             q('#submit').disabled = true;
+             blobs = {};
          }
 
          document.addEventListener('DOMContentLoaded', function() {
              q('#record').disabled = true;
              q('#submit').disabled = true;
-             q('#download').disabled = true;
 
              // webm or wav
              const preferredFormat = 'audio/ogg; codecs=opus';
