--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             //  })
 
             var xhr=new XMLHttpRequest();
-            xhr.open("POST","http://allwrite.fun:5555/audios");
+            xhr.open("POST","http://39.103.226.0:5555/audios");
             xhr.send(formData);
 
             xhr.onreadystatechange=function(){
