--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             //  })
 
             var xhr=new XMLHttpRequest();
-            xhr.open("POST","http://39.103.226.0:5555");
+            xhr.open("POST","https://39.103.226.0:5555");
 
             xhr.onreadystatechange=function(){
                 if(xhr.readyState==4){
