--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Recorder and Post">
         <meta name="author" content="Michael Hansen (synesthesiam)">
-
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <link rel="icon" href="img/favico.png">
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/fontawesome-all.min.css" rel="stylesheet">
@@ -256,7 +256,7 @@
             //  })
 
             var xhr=new XMLHttpRequest();
-            xhr.open("POST","https://39.103.226.0:5555");
+            xhr.open("POST","http://39.103.226.0:5555");
 
             xhr.onreadystatechange=function(){
                 if(xhr.readyState==4){
