--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             //  })
 
             var xhr=new XMLHttpRequest();
-            xhr.open("POST","http://39.103.226.0:5555");
+            xhr.open("POST","http://39.103.226.0:5555/audios");
 
             xhr.onreadystatechange=function(){
                 if(xhr.readyState==4){
