--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     if (xhr.status == 200){
                         setAlert("上传成功", 'alert-success');
                     } else {
-                        setAlert("上传失败", 'alert-warning');
+                        setAlert(xhr.status, 'alert-warning');
                     }
                 } 
             }
