adjust speeker name box

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                         <div class="col-auto">
                             <label for="speekerName" class="form-label">输入你的名字（拼音或英文）</label>
                         </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col">
                             <input type="text" class="form-control" name="speekerName" id="speekerName" placeholder="Speeker name">
                         </div>
